# tech-challenge-one

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: production.py
app/api/v1/: auth.py  embrapa.py
app/core/: auth.py  cache.py  config.py
app/schemas/: auth.py  endpoints.py
app/services/: commercial_service.py  extraction_service.py  parsing_service.py  processing_service.py  production_service.py  scrap_service.py  url_service.py
