[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    { name = "lucas-tremaroli", email = "lucasluigitremaroli@outlook.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lucas-tremaroli <lucasluigitremaroli@outlook.com>"]
